...
              <Button
                mode="outlined"
                onPress={logout}
                textColor={theme.colors.error}
                contentStyle={styles.btnContent}
                style={[styles.btn, { borderColor: theme.colors.error }]}
                testID="btn-signout"
              >
                {t('account.signout')}
              </Button>
            </>
          ) : (
            <>
...
